# cyber_zone_test_task

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: .env  __main__.py  load_config.py  main.py
app/api/: __init__.py  requests_handlers.py
app/services/db/: __init__.py  controller.py  models.py
