[tool.poetry]
name = "cyber-zone-test-task"
version = "0.1.0"
description = ""
authors = ["Hedgehog2484 <hedgehogdevelop@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
asyncpg = "^0.28.0"
pydantic-settings = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
